  (cs_transformations, a list of transformation objects), and the
  non-crystallographic symmetry transformations (ncs_transformations,
  a list of transformation objects). The transformations are transformed
  to Cartesian coordinates, so they can be applied directly to the
  atom positions.
  This information is available only if ScientificPython >= 2.7.5 is
  installed.

Improvements:

- universe.configuration() has been accelerated. The speedup can be
  very important (a factor of ten), but in most situations it is rather
  modest.

2.5.17 --> 2.5.18
=================

Bug fixes:

- The module lapack_mmtk that consisted of CLAPACK2 code and caused
  compilation problems with recent GCC versions was removed. Instead,
  CLAPACK3 routines from Numeric/numpy are used. They are also faster,
  but use more working memory.


2.5.16 --> 2.5.17
=================

Bug fixes:

- PartitionedCollection.selectShell() used wrong distance criteria

- Fixed iteration over force constant matrices > 5 GB

- Improved NumPy compatibility

- AtomCluster objects were not correctly written to trajectory files

- Compilation/linking issues under Fedora 6 (GCC 4.1)

Improvements:

- New atom definitions and updates to existing ones to include
  scattering lengths

- Methods setBondAttributes and clearBondAttributes available also
  on complexes (and thus proteins)

New features:

- Method anisotropicFluctuations for normal modes.

2.5.15 --> 2.5.16
=================

Bug fixes:

- Removed the dependency on Scientific 2.7.2 introduced into Random.py.
  MMTK 2.5.16 should again work with ScientificPython > 2.5.

- Updated README

2.5.14 --> 2.5.15
=================

New features:

- New method energyEvaluatorTerms() on universes. It returns a data structure
  (dictionary of dictionaries) that contains all the force field parameters
  for the given universe. It can be used to use MMTK as an energy term
  generator for other simulation programs.
