@@ -49,8 +49,8 @@ python interpreter. However, there is no overhead for using
 mpipython on a single processor.
 
 
-Using NumPy instead of Numeric
-==============================
+Numeric vs NumPy
+================
 
 There are three nearly compatible implementations of numeric arrays for
 Python: the original one, Numerical Python (module name "Numeric"),
@@ -58,17 +58,15 @@ a later rewrite called numarray, and an evolution of Numeric that integrates
 features from numarray, called NumPy. In the long run, only NumPy will
 be maintained and further developed.
 
-MMTK was written for Numeric and still uses Numeric by default.
-However, it is now possible to use NumPy as well. To do this, use
+MMTK was originally written for Numeric, but recent releases are also
+compatible with NumPy. When MMTK is installed, it checks whether
+ScientificPython was compiled for Numeric or for NumPy, and uses the
+same package. Note that at the time of this writing, NumPy support is
+still new and not very well tested. Numeric remains the preferred
+package for using MMTK.
 
-    python setup.py build --numpy
-    python setup.py install --numpy
-
-Also note that ScientificPython must be installed with NumPy support
-as well.
-
-At the time of this writing, NumPy support is still new and not very
-well tested.
+MMTK does not support numarray at all. Since numarray development has
+stopped, this is not likely to change in the future.
 
 
 Platform-specific notes
